0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_c_units.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_c_units.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py:


Units manipulation examples
===========================

In this example, we show how units can be used in SpectroChemPy

.. GENERATED FROM PYTHON SOURCE LINES 17-20

.. code-block:: Python


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 21-24

SpectroChemPy can do calculations with units. It uses
`pint <https://pint.readthedocs.io>`_ to define and perform operations on
data with units.

.. GENERATED FROM PYTHON SOURCE LINES 26-29

Create quantities
-----------------
To create quantity, use for instance, one of the following expression:

.. GENERATED FROM PYTHON SOURCE LINES 29-32

.. code-block:: Python


    scp.Quantity("10.0 cm^-1")






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    10.0 cm<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: Python

    scp.Quantity(1.0, "cm^-1/hour")






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    1.0 cm<sup>-1</sup>⋅h<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 36-37

Or, more simply, using ``ur``:

.. GENERATED FROM PYTHON SOURCE LINES 37-41

.. code-block:: Python


    ur = scp.ur
    10.0 * ur.meter / ur.gram / ur.volt






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    10.0 m⋅g<sup>-1</sup>⋅V<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 42-44

``ur`` stands for **unit registry**, which handles many types of units
and conversions between them.

.. GENERATED FROM PYTHON SOURCE LINES 46-50

Units for dataset
-----------------

When loading experimental dataset using the ``read`` method, units are generally attributed to coordinates and data

.. GENERATED FROM PYTHON SOURCE LINES 50-54

.. code-block:: Python


    ds = scp.read("wodger.spg")[0]
    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_001.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 55-57

* ``wavenumbers`` (``x`` ) coordinates are here expressed in :math:`\mathrm{cm}^{-1}`
* and ``data`` are in absorbance (:math:`\mathrm{a.u.}`) units.

.. GENERATED FROM PYTHON SOURCE LINES 59-63

Convert between units
----------------------

Here are some examples

.. GENERATED FROM PYTHON SOURCE LINES 63-67

.. code-block:: Python


    x = 36 * ur("km/hr")
    x.to("cm/s")






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    1000.0 cm⋅s<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 68-69

We can make the conversion *inplace* using *ito* instead of *to*

.. GENERATED FROM PYTHON SOURCE LINES 69-73

.. code-block:: Python


    x.ito("m/s")
    x






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    10.0 m⋅s<sup>-1</sup>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 74-75

Obviously you cannot convert between incompatible units

.. GENERATED FROM PYTHON SOURCE LINES 75-81

.. code-block:: Python


    try:
        x.to("hour")
    except Exception as e:
        scp.error_(scp.DimensionalityError, "Expected incompatible-unit conversion error")








.. GENERATED FROM PYTHON SOURCE LINES 82-86

This, of course, also applies to ``NDDataset``.
Let's try the ``x`` coordinate. It is a wavenumber expressed in
:math:`\mathrm{cm}^{-1}` that can be converted to
:math:`\mathrm{THz}`, for instance:

.. GENERATED FROM PYTHON SOURCE LINES 86-90

.. code-block:: Python


    ds.x.ito("terahertz")
    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_002.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 91-94

We can also change wavenumber or frequency units to energy or wavelength,
as SpectroChemPy, thanks to `pint <https://pint.readthedocs.io>`_, knows how
to make the transformation.

.. GENERATED FROM PYTHON SOURCE LINES 94-98

.. code-block:: Python


    ds.x.ito("eV")
    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_003.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 99-102

.. code-block:: Python

    ds.x = ds.x.to("nanometer")
    ds.x






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>Coord [x:wavelength] — float64, size: 5549, nm</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">5549</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">wavelength</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[    1667     1667 ... 1.536e+04 1.538e+04] nm</div></div></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 103-105

.. code-block:: Python

    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_004.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 106-108

``absorbance`` units (the units of the data)
can also be transformed into ``transmittance``

.. GENERATED FROM PYTHON SOURCE LINES 108-111

.. code-block:: Python

    ds.ito("transmittance")
    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_005.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 112-113

Back to ``absorbance``.

.. GENERATED FROM PYTHON SOURCE LINES 113-117

.. code-block:: Python

    ds.ito("absorbance")
    ds.x.ito("cm^-1")
    _ = ds.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_006.png
   :alt: plot c units
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_c_units_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 118-120

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 120-122

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.657 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_c_units.ipynb <plot_c_units.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_c_units.py <plot_c_units.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_c_units.zip <plot_c_units.zip>`
